increased cmd description property truncation to 1024 chars. added some padding to make output easier to read. fixed chmod binfile argument order. updated existing UT coverage to work as expected with new logic. moved generator for recursion to bottom of file so non-ES6 syntax editors still properly display most of the filesystem file. fixed some syntax & logical errors

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -133,7 +133,7 @@ body {
 					width: 100%;
 					max-height: 100%;
 					margin: 0;
-					padding: 0;
+					padding: 0 1em;
 					overflow-y: auto;
 					display: flex;
 					flex-direction: column-reverse;
